Fix grid layout bug

--- a/src/styles/views/Game/playerList.scss
+++ b/src/styles/views/Game/playerList.scss
@@ -5,11 +5,9 @@
   justify-content: center;
 
   &__container {
-    width: 100%;
-    height: auto;
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
+    align-content: center;
     align-items: center;
     justify-content: center;
 
